# Brokerage

./: ._tsconfig.base.json  .env.example  .gitignore  BACKEND_ENHANCEMENTS_COMPLETE.md  BACKEND_ENHANCEMENTS_FINAL_PROGRESS.md  BACKEND_ENHANCEMENTS_FINAL_PROGRESS_UPDATE.md  BACKEND_ENHANCEMENTS_PROGRESS.md  BACKEND_ENHANCEMENTS_PROGRESS_UPDATE.md  BACKEND_ENHANCEMENTS_SUMMARY.md  ENHANCED_ONBOARDING_IMPLEMENTATION.md  README.md  docker-compose.production.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start-dev.sh  tsconfig.base.json  turbo.json
config/: production.env
imports/potential-broccoli/: .env.example  .eslintrc.json  .gitignore  .prettierrc  ARCHITECTURE.md  CODE_INDEX.md  CONTRIBUTING.md  Cargo.toml  MONOREPO_MIGRATION_SUMMARY.md  Makefile
imports/potential-broccoli/.github/workflows/: ci.yml  engine-ci.yml  security-foundation-ci.yml
imports/potential-broccoli/apps/backend/: .env  .env.development  .env.example  Dockerfile  KEY_MANAGEMENT.md  jest.config.js  tsconfig.json
imports/potential-broccoli/apps/backend/src/: index.js  marketData.js  monitoring.js  portfolio.js  supabaseClient.js
imports/potential-broccoli/apps/backend/tests/: auth.test.js  authService.negative.test.js  keyProvider.test.js  security.test.js  setup.js
imports/potential-broccoli/apps/mobile/: app.json  package.json
imports/potential-broccoli/apps/portal/: package.json  tsconfig.json
imports/potential-broccoli/apps/web/: package.json  tailwind.config.js
imports/potential-broccoli/crates/matching-engine/: Cargo.toml
infra/: .env.example
(+1358 files in other folders)
