[package]
name = "matching-engine"
version = "0.1.0"
edition = "2021"
authors = ["InvestPro Team"]
description = "High-performance matching engine for financial markets"
license = "MIT"
repository = "https://github.com/zlqkhokhar1-creator/potential-broccoli"

[dependencies]
serde.workspace = true
serde_json.workspace = true
rust_decimal.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "order_book_benchmarks"
harness = false

[lib]
name = "matching_engine"
path = "src/lib.rs"